# temp

./: .gitignore  .gitignore-recommended  CODE_REVIEW_SUMMARY.md  Dockerfile.backend  Dockerfile.frontend  IMPLEMENTATION_ROADMAP.md  Makefile  PRODUCTION_DEPLOYMENT.md  QUICK_REFERENCE.md  README.md  SECURITY_AUDIT.md  docker-compose.prod.yml  docker-compose.yml  dune-project  nginx.backend.conf  nginx.frontend.conf  requirements.txt  setup.md  setup.sh
DSL_directory/: AutomataGen-0.0.1.vsix  dsl_directory.opam  dune-project
DSL_directory/lib/: ast.ml  check.ml  codegen.ml  dsl_directory.ml  dune  parser.ml  tokenizer.ml
DSL_directory/test/: dune  test_check.ml  test_codegen.ml  test_dsl_directory.ml  test_integration.ml  test_interpreter.ml  test_parser.ml  test_tokenizer.ml  test_validator.ml
backend/: .env.example  .gitignore  api.py  app.py  config.py  config_fixed.py  downloader.py  downloader_fixed.py  logging_config.py  main.py  main_fixed.py  models.py  models_fixed.py  providers_other.py  providers_youtube.py  providers_youtube_fixed.py  pubsub.py  queue.py  recovery.py  requirements-prod.txt  requirements.txt  scrapers.py  settings.py  tasks.py  utils.py  worker.py  ws_manager.py  ws_manager_fixed.py
docs/: design.md
examples/: demo.dsl  sample1.dsl  sample2.dsl
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
python/: automata.py  runtime.py  test_automata.py
src/: dune  interpreter.ml  main.ml  parser.ml  python_bridge.ml  tokenizer.ml  types.ml  utils.ml  validator.ml
src_new/: dune-project
src_new/test/: dune  test_automataGEN.ml  test_integration.ml  test_parser.ml  test_tokenizer.ml  test_validator.ml
tests/: dune
(+22 files in other folders)
