(test
 (name test_tokenizer)
 (modules tokenizer/test_tokenizer)
 (libraries unix))

(test
 (name test_parser)
 (modules parser/test_parser)
 (libraries unix))

(test
 (name test_validator)
 (modules validator/test_validator)
 (libraries unix))

(test
 (name test_interpreter)
 (modules interpreter/test_interpreter)
 (libraries unix))

(test
 (name test_integration)
 (modules integration/test_integration)
 (libraries unix))
