(library
 (name tokenizer)
 (modules tokenizer))

(library
 (name my_utils)
 (modules my_utils))

(library
 (name ast)
 (modules ast))

(library
 (name parser)
 (modules parser)
  (libraries tokenizer ast))

(library
 (name check)
 (modules check)
 (libraries ast parser))

(library
 (name dsl_directory)
 (modules dsl_directory)
 (libraries tokenizer my_utils ast parser))
