(test
 (name test_dsl_directory)
 (modules test_dsl_directory)
 (libraries dsl_directory ounit2))

(test
 (name test_tokenizer)
 (modules test_tokenizer)
 (libraries tokenizer ounit2))

(test
 (name test_parser)
 (modules test_parser)
 (libraries parser tokenizer ast ounit2))

(test
 (name test_check)
 (modules test_check)
 (libraries check parser tokenizer ast ounit2))